syntax = "proto3";

package shentu.gov.v1alpha1;

import "gogoproto/gogo.proto";
import "cosmos/gov/v1beta1/gov.proto";

option go_package = "github.com/shentufoundation/shentu/x/gov/types";

// GenesisState defines the gov module's genesis state.
message GenesisState {
    // starting_proposal_id is the ID of the starting proposal.
    uint64 starting_proposal_id = 1 [(gogoproto.moretags) = "yaml:\"starting_proposal_id\""];
    // deposits defines all the deposits present at genesis.
    repeated cosmos.gov.v1beta1.Deposit deposits = 2 [(gogoproto.nullable) = false];
    // votes defines all the votes present at genesis.
    repeated cosmos.gov.v1beta1.Vote votes = 3 [(gogoproto.nullable) = false];
    // proposals defines all the proposals present at genesis.
    repeated cosmos.gov.v1beta1.Proposal proposals = 4 [(gogoproto.nullable) = false];
    // params defines all the parameters of related to deposit.
    cosmos.gov.v1beta1.DepositParams deposit_params = 5 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"deposit_params\""];
    // params defines all the parameters of related to voting.
    cosmos.gov.v1beta1.VotingParams voting_params = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_params\""];
    // params defines all the parameters of related to tally.
    cosmos.gov.v1beta1.TallyParams tally_params = 7 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"tally_params\""];
    // params defines all the parameters of related to custom.
    CustomParams custom_params = 8 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"custom_params\""];
}

message CustomParams {
    cosmos.gov.v1beta1.TallyParams certifier_update_security_vote_tally = 1;
    cosmos.gov.v1beta1.TallyParams certifier_update_stake_vote_tally = 2;
    // proposals that require and have passed cert votes.
    repeated uint64 cert_voted_proposal_ids = 3 [(gogoproto.moretags) = "yaml:\"cert_voted_proposal_ids\""];
}

