syntax = "proto3";
package shentu.gov.v1alpha1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/gov/v1beta1/tx.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/shentufoundation/shentu/x/gov/types";

option (gogoproto.stable_marshaler_all) = true;

// Msg defines the bank Msg service.
service Msg {
  // SubmitProposal defines a method to create new proposal given a content.
  rpc SubmitProposal(cosmos.gov.v1beta1.MsgSubmitProposal) returns (cosmos.gov.v1beta1.MsgSubmitProposalResponse);

  // Vote defines a method to add a vote on a specific proposal.
  rpc Vote(cosmos.gov.v1beta1.MsgVote) returns (cosmos.gov.v1beta1.MsgVoteResponse);

  // VoteWeighted defines a method to add a weighted vote on a specific proposal.
  //
  // Since: cosmos-sdk 0.43
  rpc VoteWeighted(cosmos.gov.v1beta1.MsgVoteWeighted) returns (cosmos.gov.v1beta1.MsgVoteWeightedResponse);

  // Deposit defines a method to add deposit on a specific proposal.
  rpc Deposit(cosmos.gov.v1beta1.MsgDeposit) returns (cosmos.gov.v1beta1.MsgDepositResponse);
}
